--- a/FormGame/FormPedraPapelTesoura.resx
+++ b/FormGame/FormPedraPapelTesoura.resx
@@ -3007,38 +3007,24 @@
         O6sAAAAASUVORK5CYII=
 </value>
   </data>
-  <assembly alias="DevExpress.Data.v20.2" name="DevExpress.Data.v20.2, Version=20.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-  <data name="FormPedraPapelTesoura.IconOptions.SvgImage" type="DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v20.2" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="FormPedraPapelTesoura.IconOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFlEZXZFeHByZXNzLkRhdGEudjIwLjIsIFZlcnNpb249MjAuMi4z
-        LjAsIEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49Yjg4ZDE3NTRkNzAwZTQ5YQUBAAAAHURl
-        dkV4cHJlc3MuVXRpbHMuU3ZnLlN2Z0ltYWdlAQAAAAREYXRhBwICAAAACQMAAAAPAwAAAOUFAAAC77u/
-        PD94bWwgdmVyc2lvbj0nMS4wJyBlbmNvZGluZz0nVVRGLTgnPz4NCjxzdmcgeD0iMHB4IiB5PSIwcHgi
-        IHZpZXdCb3g9IjAgMCAzMiAzMiIgdmVyc2lvbj0iMS4xIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcv
-        MjAwMC9zdmciIHhtbG5zOnhsaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB4bWw6c3Bh
-        Y2U9InByZXNlcnZlIiBpZD0iTGF5ZXJfMSIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAg
-        MzIgMzIiPg0KICA8c3R5bGUgdHlwZT0idGV4dC9jc3MiPgoJLkJsdWV7ZmlsbDojMTE3N0Q3O30KCS5Z
-        ZWxsb3d7ZmlsbDojRkZCMTE1O30KCS5SZWR7ZmlsbDojRDExQzFDO30KCS5HcmVlbntmaWxsOiMwMzlD
-        MjM7fQoJLkJsYWNre2ZpbGw6IzcyNzI3Mjt9CgkuV2hpdGV7ZmlsbDojRkZGRkZGO30KCS5zdDB7b3Bh
-        Y2l0eTowLjU7fQoJLnN0MXtvcGFjaXR5OjAuNzU7fQoJLnN0MntkaXNwbGF5Om5vbmU7fQoJLnN0M3tk
-        aXNwbGF5OmlubGluZTtmaWxsOiNGRkIxMTU7fQoJLnN0NHtkaXNwbGF5OmlubGluZTt9Cgkuc3Q1e2Rp
-        c3BsYXk6aW5saW5lO29wYWNpdHk6MC43NTt9Cgkuc3Q2e2Rpc3BsYXk6aW5saW5lO29wYWNpdHk6MC41
-        O30KCS5zdDd7ZGlzcGxheTppbmxpbmU7ZmlsbDojMDM5QzIzO30KCS5zdDh7ZGlzcGxheTppbmxpbmU7
-        ZmlsbDojRDExQzFDO30KCS5zdDl7ZGlzcGxheTppbmxpbmU7ZmlsbDojMTE3N0Q3O30KCS5zdDEwe2Rp
-        c3BsYXk6aW5saW5lO2ZpbGw6I0ZGRkZGRjt9Cjwvc3R5bGU+DQogIDxnIGlkPSJTa3VsbCI+DQogICAg
-        PHBhdGggZD0iTTIxLjcsMjRjMC4yLDAuNiwwLjMsMS4zLDAuMywyYzAsMy4zLTIuNyw2LTYsNnMtNi0y
-        LjctNi02YzAtMC43LDAuMS0xLjQsMC4zLTJjMC44LDIuMywzLDQsNS43LDQgICBTMjAuOCwyNi4zLDIx
-        LjcsMjR6IE0yNy4yLDE3LjZjMC41LDAuNywwLjgsMS41LDAuOCwyLjRjMCwyLjItMS44LDQtNCw0Yy0x
-        LjEsMC0yLTAuNC0yLjctMS4xYy0xLDEuOC0zLDMuMS01LjMsMy4xICAgcy00LjItMS4zLTUuMy0zLjFD
-        MTAsMjMuNiw5LjEsMjQsOCwyNGMtMi4yLDAtNC0xLjgtNC00YzAtMC45LDAuMy0xLjcsMC44LTIuNEMz
-        LjEsMTUuOCwyLDEzLjUsMiwxMUMyLDQuOSw4LjMsMCwxNiwwICAgczE0LDQuOSwxNCwxMUMzMCwxMy41
-        LDI4LjksMTUuOCwyNy4yLDE3LjZ6IE0xMy4zLDEyLjdjLTEuMS0xLjEtMy0wLjktNC4yLDAuM3MtMS40
-        LDMuMi0wLjMsNC4yczMsMC45LDQuMi0wLjMgICBDMTQuMiwxNS43LDE0LjQsMTMuOCwxMy4zLDEyLjd6
-        IE0xOCwyMWMwLTAuMSwwLTAuMy0wLjEtMC40TDE2LDE2bC0xLjksNC42YzAsMC4xLTAuMSwwLjItMC4x
-        LDAuNGMwLDAuNiwwLjQsMSwxLDFzMS0wLjQsMS0xICAgYzAsMC42LDAuNCwxLDEsMVMxOCwyMS42LDE4
-        LDIxeiBNMjMsMTNjLTEuMy0xLjMtMy4yLTEuNC00LjItMC4zcy0wLjksMywwLjMsNC4yYzEuMywxLjMs
-        My4yLDEuNCw0LjIsMC4zUzI0LjIsMTQuMywyMywxM3oiIGNsYXNzPSJCbGFjayIgLz4NCiAgPC9nPg0K
-        PC9zdmc+Cw==
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANHSURBVHhe7ZyxbRtRFATVhmow3IJdg2K5AKsAO1YnCq0G
+        VIjdEK0nv0uIjcy73f//zQATMOLDzQK8iHcAAAAAAAAAAAAAE/D0+BwVwjx9u0SFMCqKUwijojiFMCqK
+        UwijojiFMCqKUwijojiFMCqKUwijojiFMCqKUwijojiFMCqKUwijojiFMCqKUwijojiFMCqKUwijojiF
+        MCqKUwijojiFMCqKUwijojiFMCqKUwijojiFMCqKUwijojiFMCqKUwijojiFMCqKUwijojiFMN8fX2QY
+        h/XdMACJERB/MJwjIP6gOEZA/ME5cgTEn4QjRkD8ydhzBMSflD1GQPx/fH14e3734vbLw9ttAW4ZwY3x
+        Hz69vjx8fr34/bX/v5e9x4gMoIyMYNr45WIDKK0jmDp+ueAASssIpo9fLjqA8tARLBG/XHgA5SEjWCZ+
+        ufgAyl1HsFT88gQDKHcZwXLxy5MMoLx5BDcwZvzyRAMoEyMYN355sgGUzhGMHb884QBKxwjGj1+edADl
+        kSOYI3554gGUR4xgnvjlyQdQ7jmCueKXDODDPUYwX/ySAXzIAHbk/YHyEzCNvATyErg37w92igEcEX9j
+        nhGcdABHxt+YYwQnHIAj/sb4IzjZAJzxN8YewYkGkIi/Me4ITjKAW+Pf//zzUvbH/2LMEZxgADvFv7SL
+        jWDxAewcf8ERLDyAg+JvLjKCRQdwcPzNBUaw4ABM8TcnH8FiAzDH35x4BAsNIBR/c9IRHDCAGamAV0H/
+        x5tGACEq3FXIW2QEM1HBrgLuISOYgQp1FW5PGcHIVKCrYEfICEakwlyFOlJGMBIV5CqQQ0YwAhXiKoxT
+        RpBGRLHaZ0AKFcVpnwEpVBSnfQakUFGc9hmQQkVx2mdAChXFaZ8BKVQUp30GpFBRnPYZkEJFcdpnQAoV
+        xWmfASlUFKd9BqRQUZz2GZBCRXHaZ0AKFcVpnwEpVBSnfQakUFGc9hmQQkVx2mdAChXFaZ8BKVQUp30G
+        pFBRnPYZkEJFcdpnQAoVxWmfASlUFKd9BqRQUZz2GZBCRXHaZ0AKFcVpnwEpVBSnfQakUFGc9hmQQkVx
+        2mdAivsfv5+T9hkAAAAAAAAAAAAAw3J39xd5OLhJbIC0mAAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
